# serializer version: 1
# name: test_switch_entities[False][switch.outdoor_smart_plug_433_mhz-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.outdoor_smart_plug_433_mhz',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '433 MHz',
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': '433 MHz',
    'platform': 'systemnexa2',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': '433mhz',
    'unique_id': 'aabbccddee02-433Mhz',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities[False][switch.outdoor_smart_plug_433_mhz-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'switch',
      'friendly_name': 'Outdoor Smart Plug 433 MHz',
    }),
    'context': <ANY>,
    'entity_id': 'switch.outdoor_smart_plug_433_mhz',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_entities[False][switch.outdoor_smart_plug_cloud_access-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.outdoor_smart_plug_cloud_access',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Cloud access',
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Cloud access',
    'platform': 'systemnexa2',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'cloud_access',
    'unique_id': 'aabbccddee02-Cloud Access',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities[False][switch.outdoor_smart_plug_cloud_access-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'switch',
      'friendly_name': 'Outdoor Smart Plug Cloud access',
    }),
    'context': <ANY>,
    'entity_id': 'switch.outdoor_smart_plug_cloud_access',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch_entities[False][switch.outdoor_smart_plug_relay-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.outdoor_smart_plug_relay',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Relay',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Relay',
    'platform': 'systemnexa2',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'relay_1',
    'unique_id': 'aabbccddee02-relay_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities[False][switch.outdoor_smart_plug_relay-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Outdoor Smart Plug Relay',
    }),
    'context': <ANY>,
    'entity_id': 'switch.outdoor_smart_plug_relay',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
